мелкие исправления стилей

--- a/insurance/templates/calc/step4.html
+++ b/insurance/templates/calc/step4.html
@@ -16,7 +16,7 @@
                 
             })
 
-            //$("#id_kpp, #id_motor, #id_payments, #id_citizenship").css("visibility", "hidden");
+            $("#id_kpp, #id_motor, #id_payments, #id_citizenship").css("visibility", "hidden");
 
             $("#citizenship a, #is-first-owner a, #kpp a, #motor a, #time-deliviry a, #payment-form a").click(function(e){
                 e.preventDefault();
