--- a/insurance/templates/calc/step4.html
+++ b/insurance/templates/calc/step4.html
@@ -123,17 +123,17 @@
                     {{ form.birth_date }}
                 </td>
                 <td class="category-drive">
-                    <span>Категория прав:</span>
+                    <!--span>Категория прав:</span>
                     <a href="#" class="active">B</a>
                     <a href="#">C</a>
                     <a href="#">D</a>
-                    {{ form.category }}
+                    {{ form.category }}-->
                 </td>
                 <td>
-                    <span id="sex-label">Пол:</span>
+                    <!--span id="sex-label">Пол:</span>
                     <a id="woman-sex" class="active" href="#"></a>
                     <a id="man-sex" href="#"></a>
-                    {{ form.sex }}
+                    {{ form.sex }}-->
                 </td>
             </tr>
         </table>
@@ -314,10 +314,10 @@
                     </td>
                     <td colspan="2">
                         <div id="sex-owner">
-                            <h5>Пол:</h5>
+                            <!--h5>Пол:</h5>
                             <a id="woman-sex2" class="active" href="#"></a>
                             <a id="man-sex2" href="#"></a>
-                            {{ form.owner_sex }}
+                            {{ form.owner_sex }}-->
                         </div>
 
                         <div id="is-first-owner">
