добавлено удаление неактивного класса при изменении инпута с клавиатуры

--- a/insurance/templates/calc/step4.html
+++ b/insurance/templates/calc/step4.html
@@ -41,6 +41,10 @@
                     $(this).removeClass("inactive");
                 })
 
+                $(this).keypress(function(){
+                    $(this).removeClass("inactive");
+                })
+
                  $(this).blur(function(){
                     if($(this).val() == ""){
                         $(this).addClass("inactive");
