кнопкам навигации оформлен небольшой отступ, до первого исправления дизайна

--- a/insurance/templates/calc/step4.html
+++ b/insurance/templates/calc/step4.html
@@ -468,8 +468,11 @@
     </form>
     </div>
 
-    <a id="prev-link" href="#">Назад</a>
-    <a id="next-link" href="#">Далее</a>
+    <p style="margin:  15px 0;">
+        <a id="prev-link" href="#">Назад</a>
+        <a id="next-link" href="#">Далее</a>
+        
+    </p>
 
     </div>
     <div id="tabs-2">осаго</div>
