добавлена проверка пустых полей по клику на кнопку "далее"

--- a/insurance/static/css/style.css
+++ b/insurance/static/css/style.css
@@ -2627,6 +2627,10 @@ div.messages li {
     border:  1px solid red;
 }
 
+.empty{
+    border:  1px solid red;
+}
+
 #document-data label, #document-address label, #real-address label{
     display: none;
 }
