--- a/insurance/static/css/style.css
+++ b/insurance/static/css/style.css
@@ -983,13 +983,23 @@ input.style_input5 {
 }
 
 #login-url, #calc-url, #office-url {
-    position: absolute;
-    top: 433px;
-    right: 45px;
     color: #4e1b07;
     text-transform: uppercase;
     font-size: 18px;
-    display: none;
+    display: block;
+    margin-top: 20px;
+}
+
+#carosel-links{
+    width: 350px;
+    height: 100px;
+    position: absolute;
+    right: 50px;
+    top: 380px;
+}
+
+#carosel-links div{
+   text-align: center;
 }
 
 
