--- a/insurance/templates/index.html
+++ b/insurance/templates/index.html
@@ -39,6 +39,18 @@
         <div class="benefits">
             <img id="big-logo" src="{{ STATIC_URL }}images/big_logo.png" alt="logo"/>
 
+            <div id="carosel-text">
+                <div name="#tabs_crug_1">
+                    Все ваши страховые полисы в вашем личном кабинете онлайн
+                </div>
+                <div name="#tabs_crug_3">
+                    Все Ваши полисы всегда под рукой
+                </div>
+                <div name="#tabs_crug_2">
+                    Рассчитай ONLINE минимальную цену полиса 50 страховых компаний.
+                </div>
+            </div>
+
             <div class="benefits-words">
                 <span class="big-word">Инновационность</span>
                 <span class="main-word">Ответственность</span>
@@ -58,7 +70,9 @@
             </div>
 
             <div name="#tabs_crug_3">
-                <p>Получите книжку-помощник, где будут находится все ваши полисы, полезная информация для общения со страховой компанией.</p>
+                <p>
+                    Получите книжку-помощник, где будут находится все ваши полисы, полезная информация для общения со страховой компанией.
+                </p>
                 <a href="#" id="office-url">офис пользователя</a>
             </div>
 
